--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 server/chatjjock.pth filter=lfs diff=lfs merge=lfs -text
-*.pth filter=lfs diff=lfs merge=lfs -text
+server/*.pth filter=lfs diff=lfs merge=lfs -text
